# haskell_playground

./: .gitignore  README.md  echo.hs  rake.txt  rakefile.rb  vim-markdown-preview.html
4clojure/: longestIncreasingSubSeq.hs  loveTriangle.hs  tictactoe.hs
Munich-Lambda-Par-Examples/: Collatz.hs  CollatzPar.hs  CollatzParMap.hs  NQueens.hs  rakefile.rb
algorithms/: PriorityQueue.hs  SimplePriorityQueues.hs  a_star.hs  graphs.hs  longestIncreasingSubsequence.hs  random.hs  tags  treesearch.hs  treesearch.rb
arrows/: clusterBy.hs  evolve_recursive_boilerplate.hs  example.hs
binary/: parsing.hs  rakefile.rb  st.hs
cloudhaskell/: WorkStealing.hs  channels.hs  helloworld.hs  localprocess.hs
codeobfuscation/: obfus  rakefile.rb  rotate.hs  rotate.hs$  rotate.hs$$  rotate_1.hs  rotate_copy.hs  test.txt$  tmp.txt
coldground/: coldground.cabal  input.txt  output.txt  rakefile.rb
coldground/src/: Coldground.hs  page_end.txt  page_start.txt
concurrent/: server2.hs
conduits/: sampleA.hs  sampleB.hs  sampleC.hs  sampleD.hs  sampleE.hs
criterion/: folds.hs  rakefile.rb
crypto/: rsa_sample.hs
datamunging/: bytestring.hs  canorean.hs  charbuild.hs  chrisdoner.hs  conduit.hs  dcoutts.hs  word8stuff.hs
datastructures/: a  arrayPlay.hs  benchmark.hs  binarytree.hs  countTreeLeafs.hs  priorityQueues.hs  queue.hs  repaPlay.hs  stack.hs  trie.hs
dynamicprogramming/: buyable.hs
encoding/: base64.hs
examples/: arrays.hs  bandwidth_problem.hs  calcluations.hs  circularprograms.hs  countdown.lhs  dependencychecker.hs  directoryFlatter.hs  dynamicProgramming.hs  enumerations.hs  evaluator.hs  exercises3.hs  exercises4.hs  exercises5.hs  exercises5_2.hs  exercises7.hs  factorial.hs  fibonacci.hs  flattenlists.hs  foldMapAndCo.hs  globmatching.hs  hashtables.hs  haskell_shuffling.lhs  heterogenousCollections.hs  iteratees.hs  knapsack.hs  listComprehensions.hs  loops.hs  memoization.hs  not_combinator.hs  outputGraphA.dot  perm-fun.hs  permutations.hs  primes.hs  randomShuffel.hs  randomnumbers.hs  readIntoVector.hs  schroedinger.hs  schroedingers_cat.hs  staffelung.hs  test.txt  (+4 more)
exceptions/: throwCatchSample.hs
ffi/: main.c  rakefile.rb  test.c  test.h  test.hs
filestuff/: checkMapfile.hs  copyDirectory.hs  copyDirectory3.hs  fileManipTests.hs  stdinStdout.hs  tags
filestuff/sparks/: FemSparklines.hs  Main.hs  commitdate.txt  rakefile.rb  sparks.cabal  testdate.hs
functionalPearls/: pearl_01_smallest_free_number.hs  pearl_02_surpassing.hs  rakefile.rb
gadts/: apfelmus.hs
graphic/: Test5.hs  all_tests.hs  chartSample.hs  demo.hs  rakefile.rb
html/: example.hs  example.htm
http/: downloadLinksBOStutorial.hs
iteratee/: headers.hs  john_lato.hs  pipesTest.hs  tutorial_solution.hs
json/: aeson_lists.hs  aeson_recursive_values.hs  aeson_sample.hs  aeson_stackoverflow.hs  rakefile.rb  sample.json  test.json
linesOfCode/: #UnixTools.hs#  LOCCounter.hs  TestLoc.hs  UnixTools.hs  loccounter.cabal  rakefile.rb
linesOfCode/exampledir/logger/include/: ConsoleLoggerOutput.h
linesOfCode/exampledir/logger/src/: ConsoleLoggerOutput.cpp
lua/: passingStrings.hs  passingStrings.lua
macroGeneration/: Main.hs  eepromtable.cabal  macroGeneration.hs  rakefile
monads/: couldHaveInventedMonads.hs  couldHaveInventedMonads2.hs  couldHaveInventedMonads3.hs  evaluator.hs  evaluator_withMonad.hs  freemonad.hs  golfholes.lhs  monads.hs  monads01.hs  stateMonadTransformerExample.hs  theMonadicWay.hs  theMonadicWay2.hs  theMonadicWay3.hs  writerMonad.hs
nvramparsing/: Main.hs  NvmCompatibility.pgm  NvmCompatibility2.pgm  NvmConfigFEM.pgm  Nvram.hs  NvramCompatibility.hs  ParserUtil.hs  VerifyCompatiblityBlocks.hs  newBlockLayout.txt  nvram.cabal  rakefile.rb  small.pgm  tags
packaging/: Config.hs  GenerateEnvironment.hs  PackageParser.hs  PackageSystem.hs  UbigraphDisplayer.hs  packaging.cabal  rakefile.rb  samplePackage.dispac  tags  test.hs
parallel/: chanMd5.hs  findLines.rb  functionalWarmup.hs  parallelMd5.hs  widefinder  widefinder.hs
parsec/: InterpreterTry.hs  helloWorld.hs  lispParser.hs  lispParser01.hs
parsing/: CsvParsing.hs  ParserUtil.hs  correctIncludePaths.hs  numbersInText.hs
quickcheck/: CharSample.hs  QuickCheckUtils.hs  SmsExample.hs  filenamesplitting.hs  qc_as_a_testset_generator.hs  quickCheckStuff.hs  quickcheckExample.hs  quicktest_examples.hs  sudokuGenerator.hs  susseman_robustnes_quickcheck.lhs  testFrameworkstuff.hs  testingHaskellWithQuickcheck.lhs  testingMonadicCode.hs
random/: criterion.hs  generateRandomNumbers.hs  sumlist.hs
realworldhaskell/: ControlledVisit.hs  iocasestudy.hs
regularexpressions/: posix_examples.hs  posixregex_simple.hs  regextests.hs  (+3 more)
setupProject/: LocalReader.hs  main.hs  mypretty.cabal  rakefile
templates/project/: ProjectCreator.cabal  ProjectCreator.hs  rakefile.rb  tags  templateSamples.hs
templates/project/project_templates/Executable/: LICENSE.template  __ProjectName.cabal.template
unittestcount/: CountUnitTests.hs  Test.hs  countunittest.cabal  rakefile.rb  unittestcount_texmateproject.tmproj
xml/haxml/cproject_parsing/: cdtutils.cabal  cproject2.xml  main.hs  rakefile.rb  sample.xml  small.xml  tags
xml/haxml/cproject_parsing/ProjectInfo/: Cproject.hs  Graph.hs  ParserUtil.hs  Parsing.hs  ProjectParser.hs
xml/haxml/cproject_parsing/Util/: GlobRegex.hs  IncludeFinder.hs  SearchFiles.hs  unsafe.hs
xml/haxml/cproject_parsing/play/: foldM_example.hs  test.hs
(+191 files in other folders)
