Name:                linesofcode
Version:             0.0
Description:         picture slideshow generation
License:             AllRightsReserved
License-file:        LICENSE
Author:              oliver mueller
Maintainer:          oliver.mueller@gmail.com
Build-Depends:       base,regex-posix,regex-compat,filepath,directory,haskell98,bytestring,containers
Build-Type:          Simple

Executable:          gen
Main-is:             src/Coldground.hs
ghc-options:         -O2 -main-is Coldground

