Name:                linesofcode
Version:             0.0
Description:         mini lines of code counting facility
License:             no
License-file:        LICENSE
Author:              oliver mueller
Maintainer:          oliver.mueller@gmail.com
Build-Depends:       base,regex-posix,regex-compat,filepath,directory,haskell98,bytestring
Build-Type:          Simple

Executable:          loc
Main-is:             LOCCounter.hs
ghc-options:         -O2 -main-is LOCCounter

