Name:          mypretty
Version:       0.1
Synopsis:      My pretty printing library, with JSON support
Description:
  A simple pretty printing library that illustrates how to
  develop a Haskell library.
Author:        Real World Haskell
Maintainer:    nobody@realworldhaskell.org
License:       BSD3
License-File:  LICENSE
Cabal-Version: >= 1.2
Executable:          aliens
Main-is:             main.hs
ghc-options:         -O2 -main-is main
Build-Depends:   base >= 2.0,mtl

