Name:               FemSparklines
Version:            0.1
Synopsis:           Sparklines for FEM
Description:        Sparklines for FEM commits
Author:             Oliver Mueller
Maintainer:         oliver.mueller@gmail.com
License:            BSD3
License-File:       LICENSE
Category:           Chart
Cabal-Version:      >= 1.6
build-type:         Simple

executable benchmark
  ghc-options:      -Wall -O2
  hs-source-dirs:   . ../src
  build-depends:    base >= 4 && < 5, criterion, network, directory, text, mtl,
                    binary, bytestring, html
  main-is:          Criterion.hs
  other-modules:    Criterion.Benchmarks, Criterion.Utilities
  extensions:       OverloadedStrings
  if flag(text) 
    hs-source-dirs: ../impl/text
  if flag(string)
    hs-source-dirs: ../impl/string
